[package]
name = "image_view"
authors = ["Mark Zander <mark.of.zander@icloud.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.1"
wgpu = "0.15.0"
env_logger = "0.10.0"
log = "0.4"
pollster = "0.3.0"