[package]
name = "image_view"
authors = ["Mark Zander <mark.of.zander@icloud.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.1"
wgpu = "0.15.0"
env_logger = "0.10.0"
log = "0.4"
pollster = "0.3.0"
clap = { version = "4.1.13", features = ["derive"] }
cgmath = "0.18"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0" # NEW!

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
